--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,65 @@
-@font-face {
-    font-family: Roboto;
-    src: url("../libs/fonts/roboto/Roboto-Regular.ttf");
+html, body {
+    font-family: 'Roboto', sans-serif;
+}
+
+#capture {
+    width: 1024px;
+    height: 1024px;
 }
 
 .bg_img {
-
-	background-image: url("../1.jpg");
+    position: absolute;
+	background-image: url("../back.jpg");
 	height: 1024px;
 	width: 1024px;
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size: contain;
+}
+
+.sticker {
+    position: absolute;
+    z-index: 1;
+    background-image: url("../stickers/1.png");
+    background-repeat: no-repeat;
+    bottom: 0;
+    right: 50px;
+    width: 322px;
+    height: 422px;
+    background-size: 100% 100%;
+}
+
+.naked_label {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 70px;
+    background-color: #d09f6b;
+}
+
+.naked_label p {
+    margin: 15px;
+    color: white;
+    font-size: 30px;
+    font-weight: 300;
+    text-transform: uppercase;
+}
+
+.naked_label b {
+    font-weight: 400;
 }
 
 #text_img {
-
+    position: absolute;
 	padding-left: 20px;
 	padding-right: 20px;
 	padding-top: 20px;
 	font-size: 50px;
-	font-family: Roboto;
+}
+
+#text_img b {
+    font-weight: 500;
 }
 
 .loader {
